Short introduction to additional features, small changes in future work

--- a/latex/additional_features.tex
+++ b/latex/additional_features.tex
@@ -3,6 +3,8 @@
 \chapter{Zusätzliche Funktionen}
 \label{chapter:additional_features}
 
+In Kapitel \ref{chapter:skeleton_generation} wird beschrieben wie der Algorithmus abläuft. In diesem Kapitel geht es nun darum die Verwendungsmöglichkeiten des Algorithmus auszuschöpfen. Über eine Benutzeroberfläche wird die Bedienung vereinfacht und gezeigt welche Möglichkeiten es gibt die Skelettgenerierung zu steuern. Außerdem ist es möglich die Metadaten eines Skeletts zu speichern und Variationen zu einem bestehenden Skelett zu generieren.
+
 
 %---------------------------
 \section{Benutzeroberfläche}
