--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -4,6 +4,9 @@
 \label{chapter:basics}
 %  Vergleich von Techniken, was gibt es alles, was wurde am Ende verwendet und warum
 
+%-----------------!
+% Kurze Einleitung?
+
 %--------------------------------
 \section{Prozedurale Generierung}
 \label{procedural_generation}
