--- a/latex/skeleton_generation.tex
+++ b/latex/skeleton_generation.tex
@@ -205,8 +205,7 @@ Elliptische Knoten stellen nichtterminale Knoten dar, eckige sind terminale Knot
 Aufeinanderfolgende Wirbel sind in der Abbildung teilweise zu einem Knoten vereinfacht. Alle Benennungen von Wirbeln stehen für das Terminal "`Wirbel"'. Sie sind nur der Übersichtlichkeit halber unterschiedlich benannt. Auch die Rippen sind eigentlich separate Knoten, die jeweils Kindknoten genau eines Rückenwirbels sind.
 
  \begin{figure}
-  \centering
-  \includegraphics[height=15cm, angle=90, origin=c]{graphics/grammarGraph}
+  \includegraphics[width=\textwidth]{graphics/grammarGraph}
   \caption{Darstellung der Ersetzungsregeln \bzw Produktionen der Grammatik $G$ als Graph. Elliptische Knoten sind Nichtterminalsymbole, rechteckige Knoten Terminalsymbole. Türkisfarbene Kanten zeigen auf diejenigen Symbole, durch die ein Nichtterminal bei Anwendung der entsprechenden Regel ersetzt wird. Graue Pfeile zeigen auf das Elternelement eines nichtterminalen Knotens und schwarze Kurven zeigen für Terminale in welcher Richtung das jeweilige Elternelement liegt.}
   \label{grammar_graph}
  \end{figure}
