--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -126,6 +126,15 @@
 \pagenumbering{roman}
 \include{titlepage}
 \blankpage
+{\pagestyle{empty}\null\newpage}
+
+
+\begin{figure}
+ \centering
+ \includegraphics[width=\textwidth]{../java_skeleton_generation/example_skeletons/bird.jpg}
+ \caption*{Beispiel für ein Skelett, dass mit dem hier vorgestellten Algorithmus generiert werden kann. Als Hintergrund wurde \cite{background} verwendet.}
+\end{figure}
+\blankpage
 
 
 %% -------------------
